fix: change nav class of z-index

--- a/src/sass/components/sidebar.scss
+++ b/src/sass/components/sidebar.scss
@@ -36,6 +36,7 @@
   top: 0;
   left: -100%;
   transition: 850ms;
+  z-index: 1;
 
   @media screen and (min-width: global.$breakpoint-tablet) {
     display: block;
@@ -94,7 +95,6 @@
 
   .nav-menu-items {
     width: 100%;
-    z-index: 1;
 
     @media screen and (min-width: global.$breakpoint-tablet) {
       height: 85%;
@@ -125,5 +125,4 @@
 .nav-menu.active {
   left: 0;
   transition: 450ms;
-  z-index: 1;
 }
